crates/icydb-schema-tests/tests/ui/relation_primitive_mismatch.stderr
error: rel fields must explicitly declare prim = "..."; implicit identity types are forbidden
  --> tests/ui/relation_primitive_mismatch.rs:22:50
   |
22 |         field(ident = "target", value(item(rel = "Target")))
   |                                                  ^^^^^^^^
